Fix event targeting bug

The bug occurred in finding the valid target. Specifically if the root
has a transform we transform the event first, and then compare against
the size of the root. For transforms that result in increasing the
location (transform value < 1) the location would end up outside the
bounds of the window, which results in treating the location as in the
non-client area and targeting the root.

The fix for now is not to consider the root as a target for the non-client
area. A better fix may be to potentially transform the size by the
targets transform (if there is one), but I'm holding off on that for
now. We don't do scale bounds in WindowTargeter either.

BUG=794262
TEST=covered by tests

Change-Id: If7a913d934808fd4ffc404f74eea73d9f98b71ab
Reviewed-on: https://chromium-review.googlesource.com/877219
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530683}
Former-commit-id: c727f117c7d9f86f81022a9720766d004508ccd4